--- a/CharityManagement.Api/appsettings.json
+++ b/CharityManagement.Api/appsettings.json
@@ -1,6 +1,20 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=charity_management;Username=charity_app;Password=charitypwd"
+    "DefaultConnection": "Host=localhost;Port=5433;Database=charity_management;Username=charity_app;Password=charitypwd"
+  },
+  "Jwt": {
+    "Issuer": "CharityManagement",
+    "Audience": "CharityManagementClient",
+    "SigningKey": "ChangeMeToAStrongSecretKeyForProdUseOnlyInDevelopment",
+    "AccessTokenLifetimeMinutes": 60
+  },
+  "TwoFactor": {
+    "Issuer": "CharityManagement"
+  },
+  "Seed": {
+    "AdminUserName": "admin",
+    "AdminEmail": "admin@charity.local",
+    "AdminPassword": "Admin123!"
   },
   "Logging": {
     "LogLevel": {
